--- a/index.html
+++ b/index.html
@@ -20,29 +20,29 @@
     </header>
 
     <main>
-      <a href="/instagram" class="link-card">
-        <span>📸 Instagram</span>
+      <a href="/terminal/login.html" class="link-card">
+        <span>👽 Scripty C2 terminal | RAT</span>
+      </a>
+      <a href="/dashboard/login.html" class="link-card">
+        <span>🎲 Scripty C2 dashboard | RAT</span>
       </a>
       <a href="/dox" class="link-card">
-        <span>📁 Dox</span>
+        <span>📁 Dox | DEMO</span>
       </a>
       <a href="/tuning" class="link-card">
-        <span>⚒️ Tuning</span>
+        <span>⚒️ Tuning | RP</span>
       </a>
       <a href="/dealership" class="link-card">
-        <span>🚗 Dealership</span>
+        <span>🚗 Dealership | RP</span>
       </a>
-      <a href="/download" class="link-card">
-        <span>⚙️ Download Discord Tool</span>
-      </a>
-      <a href="/cheats" class="link-card">
-        <span>🪄 ScriptyCheats</span>
+      <a href="/downloads" class="link-card">
+        <span>⚙️ Download Discord Tool and CS2 cheats | CHEATS</span>
       </a>
       <a href="/obfocus" class="link-card">
-        <span>🐍 Obfocus</span>
+        <span>🐍 Obfocus | PYTHON</span>
       </a>
       <a href="/base64/encode.html" class="link-card">
-        <span>🧮 Base64 Encoder / Decoder</span>
+        <span>🧮 Base64 Encoder - Decoder | PYTHON</span>
       </a>
     </main>
 
