--- a/terminal/index.html
+++ b/terminal/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SCRITPY C2 PANEL</title>
+    <link rel="icon" type="image/png" href="assets/logo/logo_2.png">
     <style>
         :root {
             --bg-term: #0a0a0a;
