--- a/dashboard/panel.html
+++ b/dashboard/panel.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scripty RAT | C2</title>
-    <link rel="icon" type="image/png" href="assets/logo/logo_2.png">
+    <link rel="icon" type="image/png" href="image.jpg">
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
     <style>
         :root {
