--- a/terminal/login.html
+++ b/terminal/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SCRIPTY C2 :: SECURE LOGIN</title>
-    <link rel="icon" type="image/png" href="assets/logo/logo_2.png">
+    <link rel="icon" type="image/png" href="image.jpg">
     <style>
         :root {
             --bg-term: #0a0a0a;
