--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -54,14 +54,17 @@
 
         const app = initializeApp(firebaseConfig);
         const auth = getAuth(app);
-        const ADMIN_UID = "sJSL8EjvFhMpoiD4yaAThWDKsf32"; 
+        const ADMIN_UIDS = [
+            "Zp3AZxKLcLNy7MvEYc9zxqc5Fr82",
+            "sJSL8EjvFhMpoiD4yaAThWDKsf32"
+        ]; 
 
         // STATE
         let isRegisterMode = false;
 
         onAuthStateChanged(auth, (user) => {
             if (user) {
-                if (user.uid === ADMIN_UID) window.location.href = "panel.html";
+                if (user && ADMIN_UIDS.includes(user.uid)) window.location.href = "panel.html";
                 else {
                     document.getElementById('loginForm').style.display = 'none';
                     document.getElementById('publicMessage').style.display = 'block';
